--- a/trv_automation.yaml
+++ b/trv_automation.yaml
@@ -1,6 +1,6 @@
 blueprint:
-  name: Termostat 3 Strefy Czasowe + Obecność (ON/OFF)
-  description: Ustawia tryb TRV na HEAT/OFF na podstawie zewnętrznego czujnika, 3 harmonogramów, obecności (LUB) oraz zabezpieczenia przed przegrzaniem.
+  name: Termostat 6 Stref Czasowych + Obecność (ON/OFF)
+  description: Zaawansowane sterowanie TRV na podstawie 3 harmonogramów + Boost, obecności LUB oraz zabezpieczenia przed przegrzaniem (ON/OFF z histerezą).
   domain: automation
   input:
     trv_target:
@@ -19,12 +19,12 @@ blueprint:
     # WEJŚCIA OBECNOŚCI (LOKALIZACJA TELEFONÓW)
     person_1_entity:
       name: Encja Obecności - Osoba 1
-      description: Lokalizacja telefonu/osoby nr 1 (np. device_tracker.telefon_jan).
+      description: Lokalizacja telefonu/osoby nr 1.
       selector:
         entity: {domain: [person, device_tracker]}
     person_2_entity:
       name: Encja Obecności - Osoba 2
-      description: Lokalizacja telefonu/osoby nr 2 (np. device_tracker.telefon_anna).
+      description: Lokalizacja telefonu/osoby nr 2.
       selector:
         entity: {domain: [person, device_tracker]}
     
@@ -44,13 +44,19 @@ blueprint:
       default: 18.0
       selector:
         number: {min: 10, max: 30, unit_of_measurement: "°C", step: 0.5}
+    temp_boost:
+      name: 4. Temperatura Boost (Wzmocnienie)
+      description: Krótkotrwała podwyższona temperatura (np. rano w łazience).
+      default: 23.0
+      selector:
+        number: {min: 15, max: 35, unit_of_measurement: "°C", step: 0.5}
     temp_away:
-      name: 4. Temperatura Poza Domem (AWAY)
+      name: 5. Temperatura Poza Domem (AWAY)
       default: 16.0
       selector:
         number: {min: 10, max: 30, unit_of_measurement: "°C", step: 0.5}
     temp_max_limit:
-      name: 5. Temperatura Maksymalna (Zabezpieczenie)
+      name: 6. Temperatura Maksymalna (Zabezpieczenie)
       description: Temperatura, powyżej której TRV zostanie natychmiast wyłączony (np. 24.0°C).
       default: 24.0
       selector:
@@ -59,7 +65,7 @@ blueprint:
     # WEJŚCIE Histereza
     histeresis:
       name: Histereza (°C)
-      description: Margines tolerancji dla trybu ON/OFF, np. 0.2°C. Zapobiega migotaniu zaworu.
+      description: Margines tolerancji dla trybu ON/OFF, np. 0.2°C.
       default: 0.2
       selector:
         number:
@@ -85,6 +91,16 @@ blueprint:
       name: D. Godzina Zakończenia Oszczędności (Środek Dnia)
       description: np. 16:00
       selector: {time: }
+    time_boost:
+      name: E. Godzina Rozpoczęcia Boost
+      description: Godzina włączenia Boost (np. 06:30).
+      selector: {time: }
+    boost_duration:
+      name: F. Czas Trwania Boost (minuty)
+      description: Jak długo ma trwać Boost (np. 30 minut).
+      default: 30
+      selector:
+        number: {min: 10, max: 120, unit_of_measurement: "min", step: 10}
 
 mode: queued
 
@@ -97,22 +113,24 @@ variables:
   time_wake_str: !input time_wake
   time_midday_start_str: !input time_midday_start
   time_midday_end_str: !input time_midday_end
+  time_boost_str: !input time_boost
+  boost_duration_min: !input boost_duration
   input_comfort_temp: !input temp_comfort
   input_sleep_temp: !input temp_sleep
   input_midday_away_temp: !input temp_midday_away
+  input_boost_temp: !input temp_boost
   input_away_temp: !input temp_away
-  input_max_temp: !input temp_max_limit # NOWY INPUT
+  input_max_temp: !input temp_max_limit
   histereza: !input histeresis
 
 
 trigger:
-  # 1. Zmiana statusu obecności (Osoba 1)
+  # 1. Zmiana statusu obecności
   - platform: state
     entity_id: !input person_1_entity
-  # 2. Zmiana statusu obecności (Osoba 2)
   - platform: state
     entity_id: !input person_2_entity
-  # 3. Wyzwalanie w kluczowych godzinach (4 punkty przełączania)
+  # 2. Wyzwalanie w kluczowych godzinach (4 punkty harmonogramu + Boost)
   - platform: time
     at: !input time_sleep
   - platform: time
@@ -121,59 +139,68 @@ trigger:
     at: !input time_midday_start
   - platform: time
     at: !input time_midday_end
-  # 4. Zmiana temperatury z czujnika (dla szybkiej reakcji ON/OFF i przegrzania)
+  - platform: time
+    at: !input time_boost
+  # 3. Zmiana temperatury z czujnika (dla szybkiej reakcji ON/OFF i przegrzania)
   - platform: state
     entity_id: !input room_sensor
 
 
 action:
-  # 1. Definiowanie zmiennych czasowych i logiki przedziałów
+  # 1. Definiowanie zmiennych i Logika Harmonogramu
   - variables:
       now_time: "{{ now().time() }}"
       sleep_time: "{{ as_datetime(time_sleep_str).time() }}"
       wake_time: "{{ as_datetime(time_wake_str).time() }}"
       midday_start: "{{ as_datetime(time_midday_start_str).time() }}"
       midday_end: "{{ as_datetime(time_midday_end_str).time() }}"
-
+      
+      current_room_temp: "{{ states(input_room_sensor) | float(20.0) }}"
+      trv_mode: "{{ state_attr(input_trv, 'hvac_action') }}"
+      
       # Logika obecności: Prawda, gdy CO NAJMNIEJ JEDNA osoba jest w domu
       is_home: >
         {% set person_1_home = is_state(input_person_1, 'home') %}
         {% set person_2_home = is_state(input_person_2, 'home') %}
         {{ person_1_home or person_2_home }}
-        
-      current_room_temp: "{{ states(input_room_sensor) | float(20.0) }}"
-      trv_mode: "{{ state_attr(input_trv, 'hvac_action') }}"
       
       # Zabezpieczenie przed przegrzaniem (PRIORYTET 0)
       is_overheating: "{{ current_room_temp >= input_max_temp }}"
+
+      # Logika Boost (Aktywna tylko, gdy jesteś w domu)
+      is_boost_time: >
+        {% set now_dt = now() %}
+        {% set boost_start = today_at(time_boost_str) %}
+        {% set boost_end = boost_start + timedelta(minutes=boost_duration_min | int) %}
+        {{ is_home and now_dt >= boost_start and now_dt < boost_end }}
       
-      # Logika Czasowa (gdy JESTEŚMY w domu):
+      # Logika Czasowa (Spanie):
       is_sleep_time: >
         {% if sleep_time > wake_time %}
-          {# Przez noc, np. 23:00 do 07:00 #}
           {{ now_time >= sleep_time or now_time < wake_time }}
         {% else %}
-          {# W ciągu dnia, np. 07:00 do 23:00 #}
           {{ now_time >= sleep_time and now_time < wake_time }}
         {% endif %}
 
-      is_midday_time: >
-        {# Czas oszczędności w środku dnia #}
-        {{ now_time >= midday_start and now_time < midday_end }}
+      # Logika Czasowa (Oszczędność w dzień):
+      is_midday_time: "{{ now_time >= midday_start and now_time < midday_end }}"
         
       # 2. Obliczanie docelowej temperatury (Referencyjnej)
       target_temp: >
-        {% if not is_home %}
-          {# PRIORYTET 1: JESTEŚMY POZA DOMEM (OBU) #}
+        {% if is_boost_time %}
+          {# PRIORYTET 1: BOOST #}
+          {{ states(input_boost_temp) | float(23.0) }}
+        {% elif not is_home %}
+          {# PRIORYTET 2: JESTEŚMY POZA DOMEM (OBU) #}
           {{ states(input_away_temp) | float(16.0) }}
         {% elif is_sleep_time %}
-          {# PRIORYTET 2: CZAS SPANIA (NOC) #}
+          {# PRIORYTET 3: CZAS SPANIA (NOC) #}
           {{ states(input_sleep_temp) | float(19.0) }}
         {% elif is_midday_time %}
-          {# PRIORYTET 3: CZAS OSZCZĘDNOŚCI W ŚRODKU DNIA #}
+          {# PRIORYTET 4: CZAS OSZCZĘDNOŚCI W ŚRODKU DNIA #}
           {{ states(input_midday_away_temp) | float(18.0) }}
         {% else %}
-          {# PRIORYTET 4: CZAS KOMFORTU (Wszystko inne) #}
+          {# PRIORYTET 5: CZAS KOMFORTU #}
           {{ states(input_comfort_temp) | float(21.0) }}
         {% endif %}
 
@@ -184,19 +211,19 @@ action:
           off
         
         {% elif current_room_temp >= target_temp + histereza %}
-          {# WYŁĄCZENIE #}
+          {# WYŁĄCZENIE (powyżej zadanej + margines) #}
           off
         
         {% elif current_room_temp <= target_temp - histereza %}
-          {# WŁĄCZENIE #}
+          {# WŁĄCZENIE (poniżej zadanej - margines) #}
           heat
 
         {% elif trv_mode == 'heating' %}
-          {# KONTYNUACJA GRZANIA #}
+          {# KONTYNUACJA GRZANIA (w marginesie) #}
           heat
         
         {% else %}
-          {# KONTYNUACJA WYŁĄCZENIA #}
+          {# KONTYNUACJA WYŁĄCZENIA (w marginesie) #}
           off
         {% endif %}
       
