--- a/trv_automation.yaml
+++ b/trv_automation.yaml
@@ -194,4 +194,59 @@ action:
         {% endif %}
 
       # Logika Czasowa (Oszczędność w dzień):
-      is_midday_time:
+      is_midday_time: "{{ now_time >= midday_start and now_time < midday_end }}"
+        
+      # 2. Obliczanie docelowej temperatury (Referencyjnej)
+      target_temp: >
+        {% if is_boost_time %}
+          {# PRIORYTET 1: BOOST #}
+          {{ states(input_boost_temp) | float(23.0) }}
+        {% elif not is_home %}
+          {# PRIORYTET 2: JESTEŚMY POZA DOMEM (OBU) #}
+          {{ states(input_away_temp) | float(16.0) }}
+        {% elif is_sleep_time %}
+          {# PRIORYTET 3: CZAS SPANIA (NOC) #}
+          {{ states(input_sleep_temp) | float(19.0) }}
+        {% elif is_midday_time %}
+          {# PRIORYTET 4: CZAS OSZCZĘDNOŚCI W ŚRODKU DNIA #}
+          {{ states(input_midday_away_temp) | float(18.0) }}
+        {% else %}
+          {# PRIORYTET 5: CZAS KOMFORTU #}
+          {{ states(input_comfort_temp) | float(21.0) }}
+        {% endif %}
+
+      # 3. Logika Decyzyjna ON/OFF z Histerezą i ZABEZPIECZENIEM
+      target_hvac_mode: >
+        {% if is_overheating %}
+          {# PRIORYTET 0: WYŁĄCZ W PRZYPADKU PRZEGRZANIA #}
+          off
+        
+        {% elif current_room_temp >= target_temp + histereza %}
+          {# WYŁĄCZENIE (powyżej zadanej + margines) #}
+          off
+        
+        {% elif current_room_temp <= target_temp - histereza %}
+          {# WŁĄCZENIE (poniżej zadanej - margines) #}
+          heat
+
+        {% elif trv_mode == 'heating' %}
+          {# KONTYNUACJA GRZANIA (w marginesie) #}
+          heat
+        
+        {% else %}
+          {# KONTYNUACJA WYŁĄCZENIA (w marginesie) #}
+          off
+        {% endif %}
+      
+  # 4. Akcje (Ustawienie trybu i temperatury referencyjnej)
+  - service: climate.set_hvac_mode
+    target:
+      entity_id: "{{ input_trv }}"
+    data:
+      hvac_mode: "{{ target_hvac_mode }}"
+
+  - service: climate.set_temperature
+    target:
+      entity_id: "{{ input_trv }}"
+    data:
+      temperature: "{{ target_temp }}"
