Update time_boost logic and triggers in YAML

--- a/trv_automation.yaml
+++ b/trv_automation.yaml
@@ -94,9 +94,9 @@ blueprint:
     time_boost:
       name: E. Godzina Rozpoczęcia Boost (Opcjonalnie)
       description: Godzina włączenia Boost (np. 06:30). Pozostaw puste, jeśli Boost nie jest potrzebny.
+      default: "" # Domyślna pusta wartość
       selector: 
         time:
-      nullable: true # TUTAJ POWINNO BYĆ!
     boost_duration:
       name: F. Czas Trwania Boost (minuty)
       description: Jak długo ma trwać Boost (np. 30 minut).
@@ -132,7 +132,7 @@ trigger:
     entity_id: !input person_1_entity
   - platform: state
     entity_id: !input person_2_entity
-  # 2. Wyzwalanie w kluczowych godzinach (4 punkty harmonogramu + Boost)
+  # 2. Wyzwalanie w kluczowych godzinach (4 punkty harmonogramu)
   - platform: time
     at: !input time_sleep
   - platform: time
@@ -141,8 +141,11 @@ trigger:
     at: !input time_midday_start
   - platform: time
     at: !input time_midday_end
+  # Opcjonalny trigger Boost, aktywowany tylko jeśli podano czas
   - platform: time
     at: !input time_boost
+    id: time_boost_trigger
+    enabled: "{{ input_boost is defined and input_boost != '' }}" # Użycie warunku do włączenia/wyłączenia triggera
   # 3. Zmiana temperatury z czujnika (dla szybkiej reakcji ON/OFF i przegrzania)
   - platform: state
     entity_id: !input room_sensor
@@ -171,17 +174,16 @@ action:
 
       # Logika Boost (Aktywna tylko, gdy jesteś w domu)
       is_boost_time: >
-        {% set time_boost_input = states(time_boost_str) %}
         {# Sprawdzenie, czy pole time_boost_str JEST UŻYWANE (nie jest puste) #}
-        {% if time_boost_input is not none and time_boost_input not in ['unavailable', 'unknown'] %}
+        {% if time_boost_str != '' %}
           {% set now_dt = now() %}
-          {# Używamy time_boost_input bezpośrednio #}
-          {% set boost_start = today_at(time_boost_input) %} 
+          {# Musimy użyć 'today_at' dla konwersji, jeśli pole nie jest puste #}
+          {% set boost_start = today_at(time_boost_str) %} 
           {% set boost_end = boost_start + timedelta(minutes=boost_duration_min | int) %}
           {# BOOST jest aktywny TYLKO gdy jesteś w domu i w przedziale czasowym #}
           {{ is_home and now_dt >= boost_start and now_dt < boost_end }}
         {% else %}
-          {# Jeśli pole time_boost jest puste (brak wartości), Boost jest zawsze nieaktywny #}
+          {# Jeśli pole jest puste, Boost jest zawsze nieaktywny #}
           false
         {% endif %}
       
